[package]
name = "hello"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
rocket =  { version = "0.5.0-rc.1", features=["json"] }
serde = { version = "1.0", features = ["derive"] }